Improve error handling and debugging for password reset page

--- a/password-reset-new.html
+++ b/password-reset-new.html
@@ -382,6 +382,23 @@
     </div>
 
     <script>
+        // Define helper functions first
+        function showError(message) {
+            const errorDiv = document.getElementById('errorMessage');
+            const successDiv = document.getElementById('successMessage');
+            errorDiv.textContent = message;
+            errorDiv.style.display = 'block';
+            successDiv.style.display = 'none';
+        }
+
+        function showSuccess(message) {
+            const errorDiv = document.getElementById('errorMessage');
+            const successDiv = document.getElementById('successMessage');
+            successDiv.textContent = message;
+            successDiv.style.display = 'block';
+            errorDiv.style.display = 'none';
+        }
+
         document.addEventListener('DOMContentLoaded', function() {
             const urlParams = new URLSearchParams(window.location.search);
             const phoneFromUrl = urlParams.get('phone');
@@ -395,8 +412,33 @@
             const method = phone ? 'phone' : 'email';
             const identifier = phone || email;
 
-            if (!identifier || !resetToken) {
-                window.location.href = 'password-reset-request.html';
+            console.log('Password reset new page loaded:', {
+                phone,
+                email,
+                method,
+                identifier,
+                resetToken,
+                hasResetToken: !!resetToken
+            });
+
+            if (!identifier) {
+                console.error('No identifier found - redirecting to request page');
+                showError('Session expired. Please start the password reset process again.');
+                setTimeout(() => {
+                    window.location.href = 'password-reset-request.html';
+                }, 2000);
+                return;
+            }
+
+            if (!resetToken) {
+                console.error('No reset token found - redirecting to verify page');
+                showError('Verification token missing. Please verify your OTP again.');
+                setTimeout(() => {
+                    const redirectUrl = method === 'phone'
+                        ? `password-reset-verify.html?phone=${encodeURIComponent(identifier)}`
+                        : `password-reset-verify.html?email=${encodeURIComponent(identifier)}`;
+                    window.location.href = redirectUrl;
+                }, 2000);
                 return;
             }
 
@@ -544,22 +586,6 @@
                     submitSpinner.style.display = 'none';
                 }
             });
-
-            function showError(message) {
-                const errorDiv = document.getElementById('errorMessage');
-                const successDiv = document.getElementById('successMessage');
-                errorDiv.textContent = message;
-                errorDiv.style.display = 'block';
-                successDiv.style.display = 'none';
-            }
-
-            function showSuccess(message) {
-                const errorDiv = document.getElementById('errorMessage');
-                const successDiv = document.getElementById('successMessage');
-                successDiv.textContent = message;
-                successDiv.style.display = 'block';
-                errorDiv.style.display = 'none';
-            }
 
             function formatPhoneForDisplay(phone) {
                 if (phone.startsWith('+263')) {
