Add detailed error logging for 404 debugging

--- a/password-reset-new.html
+++ b/password-reset-new.html
@@ -556,10 +556,17 @@
                         body: JSON.stringify(body)
                     });
 
-                    const data = await response.json();
-                    
-                    console.log('Reset password response:', data);
                     console.log('Response status:', response.status);
+                    console.log('Response OK:', response.ok);
+                    
+                    if (!response.ok) {
+                        const errorText = await response.text();
+                        console.error('Response error:', errorText);
+                        throw new Error(`HTTP ${response.status}: ${errorText || 'Request failed'}`);
+                    }
+
+                    const data = await response.json();
+                    console.log('Reset password response:', data);
 
                     if (data.success) {
                         // Clear localStorage
@@ -578,7 +585,8 @@
                     }
                 } catch (error) {
                     console.error('Reset password error:', error);
-                    showError('Network error. Please try again.');
+                    console.error('Error details:', error.message);
+                    showError(error.message || 'Network error. Please try again.');
                 } finally {
                     // Reset loading state
                     submitBtn.disabled = false;
