--- a/public/direct-loan-offer.html
+++ b/public/direct-loan-offer.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #e8ecf1 100%);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -32,26 +32,27 @@
 
         .direct-badge {
             display: inline-block;
-            background: linear-gradient(135deg, #38e07b 0%, #2bc866 100%);
-            color: white;
+            background: linear-gradient(135deg, #ffd700 0%, #ffed4e 100%);
+            color: #764ba2;
             padding: 8px 20px;
             border-radius: 20px;
             font-size: 14px;
             font-weight: 700;
             margin-bottom: 15px;
-            box-shadow: 0 4px 15px rgba(56, 224, 123, 0.3);
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.4);
         }
 
         .header h1 {
             font-size: 28px;
             font-weight: 700;
-            color: #1a1a1a;
+            color: white;
             margin-bottom: 8px;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         }
 
         .header p {
             font-size: 16px;
-            color: #666;
+            color: rgba(255, 255, 255, 0.95);
             font-weight: 400;
         }
 
@@ -103,7 +104,7 @@
         }
 
         .total-row .amount-value {
-            color: #38e07b;
+            color: #667eea;
             font-size: 42px;
         }
 
@@ -167,21 +168,22 @@
         .cta-button {
             width: 100%;
             padding: 18px;
-            background: linear-gradient(135deg, #38e07b 0%, #2bc866 100%);
-            color: white;
+            background: linear-gradient(135deg, #ffd700 0%, #ffed4e 100%);
+            color: #764ba2;
             border: none;
             border-radius: 12px;
             font-size: 16px;
             font-weight: 700;
             cursor: pointer;
-            box-shadow: 0 6px 20px rgba(56, 224, 123, 0.4);
+            box-shadow: 0 6px 20px rgba(255, 215, 0, 0.5);
             transition: all 0.3s ease;
             margin-bottom: 15px;
         }
 
         .cta-button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(56, 224, 123, 0.5);
+            box-shadow: 0 8px 25px rgba(255, 215, 0, 0.6);
+            background: linear-gradient(135deg, #ffed4e 0%, #ffd700 100%);
         }
 
         .cta-button:active {
@@ -192,7 +194,7 @@
         .footer {
             text-align: center;
             font-size: 12px;
-            color: #999;
+            color: rgba(255, 255, 255, 0.8);
             line-height: 1.6;
         }
 
@@ -200,14 +202,15 @@
         .apr-disclosure {
             text-align: center;
             padding: 12px;
-            background: #fff3cd;
+            background: rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(255, 215, 0, 0.5);
             border-radius: 8px;
             margin-bottom: 15px;
         }
 
         .apr-disclosure-text {
             font-size: 13px;
-            color: #856404;
+            color: white;
             font-weight: 600;
         }
 
@@ -218,13 +221,17 @@
         }
 
         .spinner {
-            border: 3px solid #f3f3f3;
-            border-top: 3px solid #38e07b;
+            border: 3px solid rgba(255, 255, 255, 0.3);
+            border-top: 3px solid #ffd700;
             border-radius: 50%;
             width: 40px;
             height: 40px;
             animation: spin 1s linear infinite;
             margin: 0 auto 15px;
+        }
+        
+        .loading p {
+            color: white;
         }
 
         @keyframes spin {
