Configure Admin API key and add documentation

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -304,7 +304,7 @@
 
     <script>
         const API_BASE = window.location.origin;
-        const ADMIN_KEY = 'admin-dev-key-123'; // Change this in production
+        const ADMIN_KEY = 'zimcrowd-admin-2025-secure-key-xyz789'; // Matches .env ADMIN_API_KEY
 
         async function fetchAPI(endpoint) {
             try {
