Upgrade to cryptographically secure admin API key

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -304,7 +304,7 @@
 
     <script>
         const API_BASE = window.location.origin;
-        const ADMIN_KEY = 'zimcrowd-admin-2025-secure-key-xyz789'; // Matches .env ADMIN_API_KEY
+        const ADMIN_KEY = 'zimcrowd-admin-f0ed42f52b092b49ecf3eaa070aee9bc'; // Cryptographically secure key
 
         async function fetchAPI(endpoint) {
             try {
