--- a/secondary-market.html
+++ b/secondary-market.html
@@ -152,8 +152,9 @@
                 <h1><span class="label label-green">Secondary Market</span> - Trade Your Investments</h1>
                 <p class="header-subtitle">Buy and sell loan portions with liquidity and flexibility. Access a dynamic marketplace where you can trade existing investments or provide liquidity to other lenders.</p>
                 <div class="button-group">
-                    <button class="btn-primary">Start Trading</button>
-                    <button class="btn-secondary">Learn More</button>
+                    <button class="btn-primary" onclick="document.getElementById('trading-cards').scrollIntoView({behavior: 'smooth'})">Start Trading</button>
+                    <button class="btn-primary auth-required" id="viewPortfolioBtn" style="display: none;">View My Portfolio</button>
+                    <button class="btn-secondary guest-only" onclick="window.location.href='login.html'">Login to Trade</button>
                 </div>
             </div>
             <div class="header-image" style="margin-top: 200px; margin-left: 100px;">
@@ -179,17 +180,49 @@
         <div class="separator-glow"></div>
     </div>
 
-    <!-- Market Overview Section -->
-    <section class="section" id="market-overview">
-        <div class="section-header">
-            <div class="heading-wrapper">
-                <span class="label label-green">Market Overview</span>
+    <!-- Market Stats Section -->
+    <section class="stats-section" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); padding: 60px 20px; margin-top: -50px;">
+        <div class="container">
+            <div class="stats-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; max-width: 1200px; margin: 0 auto;">
+                <div class="stat-card" style="background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border-radius: 16px; padding: 30px; text-align: center; border: 1px solid rgba(255,255,255,0.2);">
+                    <div class="stat-icon" style="font-size: 2.5em; margin-bottom: 15px;">🔄</div>
+                    <div class="stat-value" id="activeListings" style="font-size: 2.5em; font-weight: 700; color: white; margin-bottom: 10px;">0</div>
+                    <div class="stat-label" style="color: rgba(255,255,255,0.9); font-size: 1.1em;">Active Listings</div>
+                </div>
+                <div class="stat-card" style="background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border-radius: 16px; padding: 30px; text-align: center; border: 1px solid rgba(255,255,255,0.2);">
+                    <div class="stat-icon" style="font-size: 2.5em; margin-bottom: 15px;">💵</div>
+                    <div class="stat-value" id="totalVolume" style="font-size: 2.5em; font-weight: 700; color: white; margin-bottom: 10px;">$0</div>
+                    <div class="stat-label" style="color: rgba(255,255,255,0.9); font-size: 1.1em;">Total Traded</div>
+                </div>
+                <div class="stat-card" style="background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border-radius: 16px; padding: 30px; text-align: center; border: 1px solid rgba(255,255,255,0.2);">
+                    <div class="stat-icon" style="font-size: 2.5em; margin-bottom: 15px;">📉</div>
+                    <div class="stat-value" id="avgDiscount" style="font-size: 2.5em; font-weight: 700; color: white; margin-bottom: 10px;">0%</div>
+                    <div class="stat-label" style="color: rgba(255,255,255,0.9); font-size: 1.1em;">Avg Discount</div>
+                </div>
+                <div class="stat-card" style="background: rgba(255,255,255,0.1); backdrop-filter: blur(10px); border-radius: 16px; padding: 30px; text-align: center; border: 1px solid rgba(255,255,255,0.2);">
+                    <div class="stat-icon" style="font-size: 2.5em; margin-bottom: 15px;">🔀</div>
+                    <div class="stat-value" id="totalTransfers" style="font-size: 2.5em; font-weight: 700; color: white; margin-bottom: 10px;">0</div>
+                    <div class="stat-label" style="color: rgba(255,255,255,0.9); font-size: 1.1em;">Total Transfers</div>
+                </div>
             </div>
-            <p class="section-description">Get a snapshot of current market activity and trends. Our secondary market provides real-time liquidity for loan investments.</p>
         </div>
-
-
     </section>
+
+    <!-- Modern Section Separator -->
+    <div class="section-separator">
+        <div class="separator-container">
+            <div class="separator-line"></div>
+            <div class="separator-icon">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 2L2 7L12 12L22 7L12 2Z" stroke="#38e07b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M2 17L12 22L22 17" stroke="#38e07b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M2 12L12 17L22 12" stroke="#38e07b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </div>
+            <div class="separator-line"></div>
+        </div>
+        <div class="separator-glow"></div>
+    </div>
 
     <!-- Trading Cards Section -->
     <section class="section" id="trading-cards">
@@ -202,51 +235,45 @@
 
         <!-- Filters and Search -->
         <div class="filters-section" style="background: rgba(255, 255, 255, 0.9); border-radius: 20px; padding: 30px; margin-bottom: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);">
+            <h3 style="margin-bottom: 20px; color: var(--color-black);">Filter Secondary Market</h3>
             <div class="filters-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 20px;">
                 <div class="filter-group">
-                    <label style="font-weight: 600; color: var(--color-black); margin-bottom: 8px; display: block;">Price Range</label>
-                    <select style="width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: white;">
-                        <option>All Prices</option>
-                        <option>$50 - $200</option>
-                        <option>$200 - $500</option>
-                        <option>$500 - $1,000</option>
-                        <option>$1,000+</option>
-                    </select>
+                    <label style="font-weight: 600; color: var(--color-black); margin-bottom: 8px; display: block;">Min Discount (%)</label>
+                    <input type="number" id="minDiscount" placeholder="e.g., -20" step="1" style="width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: white;">
+                    <small style="color: #666; font-size: 0.85em;">Negative = discount</small>
                 </div>
                 <div class="filter-group">
-                    <label style="font-weight: 600; color: var(--color-black); margin-bottom: 8px; display: block;">Risk Level</label>
-                    <select style="width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: white;">
-                        <option>All Risk Levels</option>
-                        <option>Low Risk</option>
-                        <option>Medium Risk</option>
-                        <option>High Risk</option>
-                    </select>
-                </div>
-                <div class="filter-group">
-                    <label style="font-weight: 600; color: var(--color-black); margin-bottom: 8px; display: block;">Time to Maturity</label>
-                    <select style="width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: white;">
-                        <option>All Maturities</option>
-                        <option>0-6 months</option>
-                        <option>6-12 months</option>
-                        <option>12-24 months</option>
-                        <option>24+ months</option>
-                    </select>
-                </div>
-                <div class="filter-group">
-                    <label style="font-weight: 600; color: var(--color-black); margin-bottom: 8px; display: block;">Sort By</label>
-                    <select style="width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: white;">
-                        <option>Newest First</option>
-                        <option>Price: Low to High</option>
-                        <option>Price: High to Low</option>
-                        <option>Highest Premium</option>
-                        <option>Lowest Premium</option>
-                    </select>
+                    <label style="font-weight: 600; color: var(--color-black); margin-bottom: 8px; display: block;">Max Price ($)</label>
+                    <input type="number" id="maxPrice" placeholder="e.g., 5000" min="1" style="width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: white;">
                 </div>
             </div>
-            <div class="search-bar" style="display: flex; gap: 15px; align-items: center;">
-                <input type="text" placeholder="Search by borrower name or loan purpose..." style="flex: 1; padding: 15px; border: 1px solid #e5e7eb; border-radius: 8px; background: white; font-size: 16px;">
-                <button class="btn-primary" style="padding: 15px 30px;">Search</button>
+            <div class="filter-actions" style="display: flex; gap: 15px; align-items: center;">
+                <button id="applyFilters" class="btn-primary" style="padding: 15px 30px;"><i class="fas fa-filter"></i> Apply Filters</button>
+                <button id="clearFilters" class="btn-secondary" style="padding: 15px 30px;"><i class="fas fa-times"></i> Clear</button>
             </div>
+        </div>
+
+        <!-- Secondary Market Listings (Dynamic) -->
+        <div id="secondaryListings" class="trading-cards-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); gap: 30px; margin-bottom: 40px;">
+            <!-- Loan cards will be dynamically inserted here by JavaScript -->
+            <div class="loading-state" style="grid-column: 1 / -1; text-align: center; padding: 60px 20px;">
+                <i class="fas fa-spinner fa-spin fa-3x" style="color: #f5576c; margin-bottom: 20px;"></i>
+                <h3>Loading secondary market listings...</h3>
+                <p style="color: #666;">Please wait while we fetch available loans</p>
+            </div>
+        </div>
+
+        <!-- Pagination -->
+        <div class="pagination" style="display: flex; justify-content: center; align-items: center; gap: 20px; margin-top: 40px; padding: 20px; background: rgba(255,255,255,0.9); border-radius: 12px;">
+            <button id="prevPage" class="btn-secondary" style="padding: 12px 24px;" disabled>
+                <i class="fas fa-chevron-left"></i> Previous
+            </button>
+            <span style="font-weight: 600; color: var(--color-black);">
+                Page <span id="currentPage">1</span> of <span id="totalPages">1</span>
+            </span>
+            <button id="nextPage" class="btn-secondary" style="padding: 12px 24px;" disabled>
+                Next <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
 
         <!-- Trading Cards Grid -->
@@ -833,5 +860,319 @@
             });
         });
     </script>
+
+    <!-- P2P Secondary Market JavaScript -->
+    <script src="js/p2p-secondary-market.js"></script>
+
+    <!-- Additional Styles for Secondary Market Components -->
+    <style>
+        /* Same base styles as primary market */
+        .listing-card {
+            background: white;
+            border: 1px solid #e0e0e0;
+            border-radius: 16px;
+            padding: 24px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
+        .listing-card:hover {
+            box-shadow: 0 8px 24px rgba(0,0,0,0.12);
+            transform: translateY(-4px);
+            border-color: #f5576c;
+        }
+
+        .badge-discount {
+            background: #4CAF50;
+            color: white;
+            padding: 6px 12px;
+            border-radius: 20px;
+            font-size: 0.75em;
+            font-weight: 600;
+        }
+
+        .badge-premium {
+            background: #FF9800;
+            color: white;
+            padding: 6px 12px;
+            border-radius: 20px;
+            font-size: 0.75em;
+            font-weight: 600;
+        }
+
+        .badge-success {
+            background: #4CAF50;
+            color: white;
+        }
+
+        .badge-warning {
+            background: #FF9800;
+            color: white;
+        }
+
+        .price-section {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin: 20px 0;
+            padding: 20px;
+            background: #f8f9fa;
+            border-radius: 12px;
+        }
+
+        .price-item {
+            text-align: center;
+        }
+
+        .price-item .label {
+            font-size: 0.85em;
+            color: #666;
+            margin-bottom: 8px;
+            display: block;
+        }
+
+        .price-item .value {
+            font-size: 1.5em;
+            font-weight: 700;
+            color: #333;
+        }
+
+        .price-item .value.highlight {
+            color: #f5576c;
+        }
+
+        .performance-info {
+            margin: 20px 0;
+            padding: 15px;
+            background: #f0f7ff;
+            border-radius: 8px;
+        }
+
+        .info-item {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        .info-item:last-child {
+            margin-bottom: 0;
+        }
+
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.6);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 10000;
+            padding: 20px;
+        }
+
+        .modal.active {
+            display: flex;
+        }
+
+        .modal-content {
+            background: white;
+            border-radius: 16px;
+            max-width: 700px;
+            width: 100%;
+            max-height: 90vh;
+            overflow-y: auto;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+        }
+
+        .modal-content.large {
+            max-width: 1000px;
+        }
+
+        .modal-header {
+            padding: 24px;
+            border-bottom: 1px solid #e0e0e0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .modal-close {
+            background: none;
+            border: none;
+            font-size: 1.5em;
+            cursor: pointer;
+            color: #666;
+            padding: 0;
+            width: 32px;
+            height: 32px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            transition: all 0.3s;
+        }
+
+        .modal-close:hover {
+            background: #f0f0f0;
+            color: #333;
+        }
+
+        .modal-body {
+            padding: 24px;
+        }
+
+        .modal-footer {
+            padding: 24px;
+            border-top: 1px solid #e0e0e0;
+            display: flex;
+            gap: 12px;
+            justify-content: flex-end;
+        }
+
+        .portfolio-summary {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .summary-card {
+            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            color: white;
+            padding: 20px;
+            border-radius: 12px;
+            text-align: center;
+        }
+
+        .summary-card label {
+            font-size: 0.9em;
+            opacity: 0.9;
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .summary-card value {
+            font-size: 1.8em;
+            font-weight: 700;
+            display: block;
+        }
+
+        .holdings-list {
+            display: grid;
+            gap: 15px;
+        }
+
+        .holding-card {
+            background: white;
+            border: 1px solid #e0e0e0;
+            border-radius: 12px;
+            padding: 20px;
+        }
+
+        .holding-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .holding-amount {
+            font-size: 1.5em;
+            font-weight: 700;
+            color: #f5576c;
+        }
+
+        .holding-details {
+            display: flex;
+            gap: 20px;
+            font-size: 0.9em;
+            color: #666;
+        }
+
+        .toast {
+            position: fixed;
+            bottom: 24px;
+            right: 24px;
+            padding: 16px 24px;
+            border-radius: 8px;
+            color: white;
+            font-weight: 500;
+            z-index: 10001;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            animation: slideIn 0.3s ease;
+        }
+
+        .toast-success {
+            background: #4CAF50;
+        }
+
+        .toast-error {
+            background: #F44336;
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateX(400px);
+                opacity: 0;
+            }
+            to {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        .empty-state {
+            text-align: center;
+            padding: 80px 20px;
+            color: #999;
+        }
+
+        .empty-state i {
+            color: #ddd;
+            margin-bottom: 20px;
+        }
+
+        .loading-state {
+            text-align: center;
+            padding: 60px 20px;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 600;
+            color: #333;
+        }
+
+        .form-group input,
+        .form-group select {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            font-size: 1em;
+        }
+
+        @media (max-width: 768px) {
+            .listing-card {
+                padding: 16px;
+            }
+
+            .price-section {
+                grid-template-columns: 1fr;
+            }
+
+            .portfolio-summary {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </body>
 </html>
