UI: Changed secondary market stats background to purple
- Changed gradient from pink (#f093fb to #f5576c) to purple (#667eea to #764ba2)
- Now matches primary market design for consistency
- Maintains modern glassmorphism effect

--- a/secondary-market.html
+++ b/secondary-market.html
@@ -181,7 +181,7 @@
     </div>
 
     <!-- Market Stats Section -->
-    <section class="stats-section" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); padding: 60px 20px; margin-top: -50px;">
+    <section class="stats-section" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 60px 20px; margin-top: -50px;">
         <div class="container">
             <div class="stats-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; max-width: 1200px; margin: 0 auto;">
                 <div class="stat-card" style="background: rgba(255,255,255,0.15); backdrop-filter: blur(10px); border-radius: 20px; padding: 35px; text-align: center; border: 1px solid rgba(255,255,255,0.3); transition: all 0.3s ease;">
