align no loans at the center

--- a/primary-market.html
+++ b/primary-market.html
@@ -196,6 +196,14 @@
             </div>
         </div>
 
+        <!-- Empty State Message -->
+        <div id="emptyState" class="empty-state" style="display: none; text-align: center; padding: 80px 20px; margin-bottom: 40px;">
+            <i class="fas fa-search fa-4x" style="color: #ddd; margin-bottom: 30px;"></i>
+            <h3 style="color: #666; margin-bottom: 15px; font-size: 1.5em;">No Loans Available for Funding</h3>
+            <p style="color: #888; font-size: 1.1em; margin-bottom: 30px;">Check back later or adjust your filters to find more opportunities.</p>
+            <button id="clearFiltersEmpty" class="btn-primary" style="padding: 15px 30px;"><i class="fas fa-filter"></i> Clear Filters</button>
+        </div>
+
         <!-- Pagination -->
         <div class="pagination" style="display: flex; justify-content: center; align-items: center; gap: 20px; margin-top: 40px; padding: 20px; background: rgba(255,255,255,0.9); border-radius: 12px;">
             <button id="prevPage" class="btn-secondary" style="padding: 12px 24px;" disabled>
