Update Frontend to Use Render API URL
FRONTEND API URL UPDATED:

1. Created Centralized Config (js/config.js):
 Production URL: https://zimcrowd-api.onrender.com
 Development URL: http://localhost:3001
 Auto-detection based on hostname
 All API endpoints defined
 Environment switching support
 Helper functions

2. Updated Test OCR Page:
 public/test-ocr.html now auto-detects environment
 Uses Render URL in production
 Uses localhost in development
 Console logging for debugging

3. Created Update Guide:
 UPDATE_API_URL.md with instructions
 How to update other HTML files
 Benefits of using config file
 Testing procedures

Features:
- Single source of truth for API URLs
- Automatic environment detection
- Easy switching between environments
- Centralized endpoint definitions
- Production-ready

Config Usage:
<script src='js/config.js'></script>
<script>
  const apiUrl = CONFIG.API_BASE_URL;
  // or
  const loginUrl = CONFIG.getUrl(CONFIG.ENDPOINTS.AUTH.LOGIN);
</script>

Auto-Detection:
- localhost  http://localhost:3001
- Production  https://zimcrowd-api.onrender.com

Ready for Vercel deployment!

--- a/public/test-ocr.html
+++ b/public/test-ocr.html
@@ -262,7 +262,12 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3001'; // Change to your API URL
+        // API Configuration - Auto-detects environment
+        const API_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+            ? 'http://localhost:3001'  // Local development
+            : 'https://zimcrowd-api.onrender.com';  // Production (Render)
+        
+        console.log('🔧 OCR Test Page - API URL:', API_URL);
         let selectedFile = null;
 
         const uploadArea = document.getElementById('uploadArea');
