Fix OCR test page response handling and add detailed logging
FIXED: OCR results now display correctly!

ROOT CAUSE:
Frontend was accessing wrong data structure
- API returns: { success: true, data: {...} }
- Frontend was using: data instead of data.data

CHANGES:
1. test-ocr.html: Fixed response handling (result.data)
2. tesseract-ocr.service.js: Added detailed logging
   - Image buffer size
   - Text length
   - Confidence score
   - Words detected
   - First 100 chars preview

RESULT:
 OCR results now display in UI
 Shows extracted text (even if low quality)
 Shows confidence score
 Shows parsed fields

NOTE: Current test shows 29% confidence with gibberish text
This means the uploaded image quality is too poor for OCR
User needs a clearer/higher resolution ID image

--- a/public/test-ocr.html
+++ b/public/test-ocr.html
@@ -362,13 +362,13 @@
                     body: formData
                 });
 
-                const data = await response.json();
+                const result = await response.json();
 
-                if (data.success) {
-                    displayResults(data);
+                if (result.success) {
+                    displayResults(result.data);
                     showSuccess('Document processed successfully!');
                 } else {
-                    showError(data.message || 'Failed to process document');
+                    showError(result.message || 'Failed to process document');
                 }
             } catch (error) {
                 showError('Error connecting to server: ' + error.message);
